--- a/src/main/webapp/views/IndiceEncarrilamiento/List.xhtml
+++ b/src/main/webapp/views/IndiceEncarrilamiento/List.xhtml
@@ -10,61 +10,82 @@
 
 
     <h:form id="form">
-        <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
-        
-           <h:outputLabel for="fechaActual" value="Fecha de Emision :" />
-           <h:outputLabel for="user" value="Usuario :" />
-           <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_encarrilamiento" />
-          
-        
-        <p:growl id="msgs" showDetail="true" />
-
-        <h:panelGrid columns="2" cellpadding="5">
-
-            <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
-            <p:calendar id="fhInicial" value="#{calendarView.date3}"  pattern="dd-MM-yyyy" showOn="button" />
-            <p:outputLabel for="fhFin" value="Fecha Final:" />
-            <p:calendar id="fhFin" value="#{calendarView.date3}" pattern="dd-MM-yyyy" showOn="button" />
+        <div align="center" style="border: 1px black solid">
+            <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
 
 
-
-
-
-        </h:panelGrid>
-
-        <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-            <p:selectBooleanCheckbox value="#{selectBooleanView.value1}" />
-            <h:outputText value="Incluir Tasa de Reparaciones Exitosas " />
-            <p:selectBooleanCheckbox value="#{selectBooleanView.value1}" />
-            <h:outputText value="Incluir Gastos por Reparacion " />
-            <p:selectBooleanCheckbox value="#{selectBooleanView.value1}" />
-            <h:outputText value="Incluir Tiempo de Reparacion Total " />
-            <p:selectBooleanCheckbox value="#{selectBooleanView.value1}" />
-            <h:outputText value="Incluir Gastos por Depreciacion " />
-
-        </h:panelGrid>
-
-
-        <p:commandButton value="Submit" update="msgs" actionListener="#{calendarView.click}" icon="ui-icon-check" />
-
-        <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
-            <p:panelGrid id="display" columns="2" columnClasses="label,value">
-
-                <h:outputText value="Button:" />
-                <h:outputText value="#{calendarView.date3}">
-                    <f:convertDateTime pattern="MM/dd/yyyy" />
-                </h:outputText>
-
-
-<!--                <p:dialog header="Values" modal="true" resizable="false" showEffect="fade" widgetVar="dlg">
-                    <h:panelGrid columns="1" id="display">
-                        <h:outputText value="Value 1: #{selectBooleanView.value1}" />
-                        <h:outputText value="Value 2: #{selectBooleanView.value2}" />
-                    </h:panelGrid>
-                </p:dialog>-->
-
+            <p:panelGrid  columns="2" columnClasses="column">
+                <p:column>
+                    <h:outputLabel for="fechaActual" value="Fecha de Emision :" />
+                </p:column>
+                <p:column>
+                    <span>&nbsp;</span>
+                    <br/>
+                    <h:outputLabel for="user" value="Usuario :" />
+                </p:column>
+                <p:column>
+                    <span>&nbsp;</span>
+                    <br/>
+                    <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_encarrilamiento" />
+                </p:column>
             </p:panelGrid>
-        </p:dialog>
+
+            <p:growl id="msgs" showDetail="true" />
+            <br/> <br/>
+            <h:panelGrid columns="2" cellpadding="5">
+
+                <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
+                <p:calendar id="fhInicial" value="#{indiceDeEncarrilamientoManagedBean.date1}"  pattern="dd-MM-yyyy" showOn="button" />
+                <p:outputLabel for="fhFin" value="Fecha Final:" />
+                <p:calendar id="fhFin" value="#{indiceDeEncarrilamientoManagedBean.date2}" pattern="dd-MM-yyyy" showOn="button" />
+
+            </h:panelGrid>
+            <br/> <br/>
+
+            <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+                <p:column>
+                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value1}" />
+                    <h:outputText value="Incluir Tasa de Reparaciones Exitosas " />
+                </p:column>
+                <p:column>
+                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value1}" />
+                    <h:outputText value="Incluir Gastos por Reparacion " />
+                </p:column>
+                <p:column>
+                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value1}" />
+                    <h:outputText value="Incluir Tiempo de Reparacion Total " />
+                </p:column>
+                <p:column>
+                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value1}" />
+                    <h:outputText value="Incluir Gastos por Depreciacion " />
+                </p:column>
+            </h:panelGrid>
+
+            <br/><br/>
+              <p:commandButton value="Submit" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check" />
+            <br/><br/>
+            <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
+                <p:panelGrid id="display" columns="2" columnClasses="label,value">
+
+                    <h:outputText value="Fecha Inicial:" />
+                    <h:outputText value="#{indiceDeEncarrilamientoManagedBean.date3}">
+                        <f:convertDateTime pattern="MM/dd/yyyy" />
+                    </h:outputText>
+                    <h:outputText value="Fecha Final:" />
+                    <h:outputText value="#{indiceDeEncarrilamientoManagedBean.date3}">
+                        <f:convertDateTime pattern="MM/dd/yyyy" />
+                    </h:outputText>
+
+                    <h:panelGrid columns="1" id="display">
+                        <h:outputText value="Value 1: #{indiceDeEncarrilamientoManagedBean.value1}" />
+                        <h:outputText value="Value 2: #{indiceDeEncarrilamientoManagedBean.value2}" />
+                        <h:outputText value="Value 3: #{indiceDeEncarrilamientoManagedBean.value3}" />
+                        <h:outputText value="Value 4: #{indiceDeEncarrilamientoManagedBean.value4}" />
+                    </h:panelGrid>
+
+                </p:panelGrid>
+            </p:dialog>
+        </div>
     </h:form>
 
 </ui:composition>
