--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -20,6 +20,7 @@
         <f:facet name="last">
             <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/bootstrap.js"></script>
             <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/reports.js"></script>
+            <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/funciones.js"></script>
             <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/pfcrud.js"></script>
         </f:facet>
         <script type="text/javascript">
@@ -37,7 +38,6 @@
     </h:head>
 
     <h:body>
-
         <p:layout fullPage="true" rendered="true">  
 
             <p:layoutUnit position="center" > 
@@ -50,7 +50,7 @@
                         <div class="menu">
                             <ul>
                                 <li><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">Inicio</a></li>
-                                <li><a href="#{facesContext.externalContext.requestContextPath}/j_spring_security_logout">Cerrar Sesión</a></li>
+                                <li><a href="#{facesContext.externalContext.requestContextPath}/j_spring_security_logout">Cerrar SesiÃ³n</a></li>
                             </ul>
                         </div>                                		
                     </div>
@@ -87,7 +87,7 @@
 
                     <div class="center_line">
                         <h5>Direccion DIMESA.
-                            <br/>Teléfono: 2354-XXXX.</h5>
+                            <br/>TelÃ©fono: 2354-XXXX.</h5>
                     </div>
                 </div>
             </p:layoutUnit>  
