--- a/src/main/webapp/WEB-INF/templates/commonLayout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/commonLayout.xhtml
@@ -48,7 +48,7 @@
             <p:layoutUnit position="center" > 
 
                 <div class="cabecera">               
-                    <div class="linea_superior"></div>
+                  
                     <div class="texto_derecha">#{currentUserSessionBean.form.sessionUser.username}</div>
                     <div class="menu_contenedor">
 
@@ -56,16 +56,16 @@
                         <div class="menu">
                             <ul>
                                 <li><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">Inicio</a></li>
-                                <li><a href="#{facesContext.externalContext.requestContextPath}/j_spring_security_logout">Cerrar SesiÃ³n</a></li>
+                                <li><a href="#{facesContext.externalContext.requestContextPath}/j_spring_security_logout">Cerrar Sesi&oacute;n</a></li>
                             </ul>
                         </div>                                		
                     </div>
-                    <ul class="list-menu">
-                        <li><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">Inicio</a></li>
-
+                   
+                </div>
+                 <ul id="nav">
                         <c:forEach items="#{currentUserSessionBean.form.menusLst}" var="menu"> 
-                            <li ><a href="#">#{menu.ssMenu.nombreMenu}</a>
-                                <ul>
+                            <li ><a class="hsubs" href="#">#{menu.ssMenu.nombreMenu}</a>
+                                <ul class="subs">
                                     <c:forEach items="#{menu.ssOpciones}" var="opcion"> 
                                         <li><a href="#{opcion.url}">#{opcion.nombreOpcion}</a></li>                                          
                                     </c:forEach>
@@ -74,7 +74,6 @@
                         </c:forEach>  
 
                     </ul>
-                </div>
 
                 <p:growl id="growl" life="3000" showDetail="true" showSummary="true"  />
 
@@ -90,8 +89,7 @@
 
                 <!--Encabezado Area de Trabajo-->
                 <div class="transp_content"></div>
-                <div class="content_info_1">
-                    <span class="img_liner_1"></span>
+                <div class="content_info_1">                 
                     <div class="content_work">
                         <br/>
                         <div class="img_shadow"></div>
@@ -108,14 +106,12 @@
                         <div class="img_shadow"></div>
                         <br/>
                     </div>
+                      
                 </div>
-
-
-
 
                 <div class="center_line">
                      <h5>Direccion DIMESA.
-                    <br/>TelÃ©fono: 2354-XXXX.</h5>
+                    <br/>Telefono: 2354-XXXX.</h5>
                 </div>
 
             </p:layoutUnit>  
