--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -22,6 +22,7 @@
             <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/reports.js"></script>
             <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/funciones.js"></script>
             <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/js/pfcrud.js"></script>
+            
         </f:facet>
         <script type="text/javascript">
             var ctx = '#{facesContext.externalContext.requestContextPath}';
@@ -42,7 +43,6 @@
 
             <p:layoutUnit position="center" > 
                 <div class="cabecera">               
-                    <div class="linea_superior"></div>
                     <div class="texto_derecha">#{currentUserSessionBean.form.sessionUser.username}</div>
                     <div class="menu_contenedor">
 
@@ -50,16 +50,18 @@
                         <div class="menu">
                             <ul>
                                 <li><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">Inicio</a></li>
-                                <li><a href="#{facesContext.externalContext.requestContextPath}/j_spring_security_logout">Cerrar SesiÃ³n</a></li>
+                                <li><a href="#{facesContext.externalContext.requestContextPath}/j_spring_security_logout">Cerrar Sesion</a></li>
                             </ul>
                         </div>                                		
                     </div>
-                    <ul class="list-menu">
-                        <li><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">Inicio</a></li>
+                </div>
+                        
+                    <ul id="nav">
+<!--                        <li  class='active'><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">Inicio</a></li>-->
 
                         <c:forEach items="#{currentUserSessionBean.form.menusLst}" var="menu"> 
-                            <li ><a href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">#{menu.ssMenu.nombreMenu}</a>
-                                <ul>
+                            <li ><a class="hsubs"  href="#{facesContext.externalContext.requestContextPath}/views/index.xhtml">#{menu.ssMenu.nombreMenu}</a>
+                                <ul class="subs">
                                     <c:forEach items="#{menu.ssOpciones}" var="opcion"> 
                                         <li><a href="#{opcion.url}">#{opcion.nombreOpcion}</a></li>                                          
                                     </c:forEach>
@@ -68,7 +70,8 @@
                         </c:forEach>  
 
                     </ul>
-                </div>
+
+                
                 <div class="background_1">
                     <p:growl id="growl" life="3000" showDetail="true" showSummary="true"  />
 
@@ -87,7 +90,7 @@
 
                     <div class="center_line">
                         <h5>Direccion DIMESA.
-                            <br/>TelÃ©fono: 2354-XXXX.</h5>
+                            <br/>Telefono: 2354-XXXX.</h5>
                     </div>
                 </div>
             </p:layoutUnit>  
