--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -8,7 +8,8 @@
 @import url(login.css);
 @import url(widht.css);
 @import url(menu_desplegable.css);
-
+@import url(menu.css);
+@import url(layout.css);
 
 .background_1{
     float:left;
@@ -45,9 +46,8 @@ body{
 .cabecera{
     background: rgba(255,255,255,0.9);
     /*    z-index: 33333;*/
-    position: fixed;
-    top: 0;
-    width: 98.3%;
+    margin-bottom: 5%;
+    width: 100%;
     -webkit-box-shadow: 0 3px rgba(0,0,0,0.2);
     box-shadow: 0 1px rgba(0,0,0,0.2);
     padding-bottom: 7px;
@@ -94,6 +94,7 @@ body{
 
 
 .menu_contenedor{
+/*    margin-bottom: 10%;*/
     z-index: 99999;
     width:100%;
     float:left;
@@ -157,7 +158,7 @@ body{
     float:left;   
     padding:0;
     list-style:none;
-    width:220px;
+    width:100%;
     font-size:16px;
     border: 1px solid rgba(0,0,0,0.8);
     margin-top: 4.8%;
@@ -547,3 +548,5 @@ body{
     background-color: crimson; 
     border-radius: 5px 5px 0px 0px;
 }
+
+
