--- a/src/main/webapp/views/ComparativoTiempoDeVidaUtil/index.xhtml
+++ b/src/main/webapp/views/ComparativoTiempoDeVidaUtil/index.xhtml
@@ -7,7 +7,7 @@
                 template="/WEB-INF/templates/commonLayout.xhtml">
 
     <ui:define name="title">
-        <h:outputText value="Indice/Promedio de Gasto por Reparacion de Equipo por Area dentro de la Institucion"/>
+        <h:outputText value="Comparativo de tiempo de vida útil entre los diferentes equipos del mismo tipo: Informe comparativo de vida útil entre equipos de la misma funcionalidad, con la finalidad de optimizar recursos monetarios dentro del área hospitalaria."/>
     </ui:define>
 
     <ui:define name="content">
