--- a/src/main/webapp/views/ComparativoDeGastosReparacion/index.xhtml
+++ b/src/main/webapp/views/ComparativoDeGastosReparacion/index.xhtml
@@ -7,12 +7,13 @@
                 template="/WEB-INF/templates/commonLayout.xhtml">
 
     <ui:define name="title">
-        <h:outputText value="Comparativo de gastos en reparación entre diferentes equipos en un periodos de tiempo"/>
+        <h:outputText value="Comparativo de gastos en reparaciÃ³n entre diferentes equipos en un periodos de tiempo"/>
     </ui:define>
 
     <ui:define name="content">
 
         <ui:include src="List.xhtml"/>
+         <ui:include src="../common/Print.xhtml"/>
 <!--        <ui:include src="Create.xhtml"/>
         <ui:include src="Edit.xhtml"/>
         <ui:include src="View.xhtml"/>-->
