--- a/src/main/webapp/views/IndicePromedioGastoPorReparacion/List.xhtml
+++ b/src/main/webapp/views/IndicePromedioGastoPorReparacion/List.xhtml
@@ -9,7 +9,7 @@
                 xmlns:composite="http://java.sun.com/jsf/composite"
 
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <h1> Indice/Promedio de Gasto por Reparacion de Equipo por Area dentro de la Institucion</h1>
+    <h2 align="center"> Indice/Promedio de Gasto por Reparacion de Equipo por Area dentro de la Institucion</h2>
 
 
     <h:form id="form">
@@ -39,31 +39,32 @@
             <h:panelGrid columns="2" >
 
                 <p:column>
-                    <p:outputLabel value="Area Hospitalaria" for="equipo" />
-                     <span>&nbsp;</span>
+                    <p:outputLabel value="Area Hospitalaria" for="area" />
+                    <span>&nbsp;</span>
                 </p:column>
                 <p:column>
-                    <p:selectOneMenu id="equipo" value="#{gastoReparacionEquipoManagedBean.equipo}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
-                        <f:selectItems value="#{gastoReparacionEquipoManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                    <p:selectOneMenu id="area" value="#{gastoReparacionEquipoManagedBean.area}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
+                        <f:selectItem itemLabel="Seleccione" />
+                        <f:selectItems value="#{gastoReparacionEquipoManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
                     </p:selectOneMenu>
-                     <span>&nbsp;</span>
+                    <span>&nbsp;</span>
                 </p:column>
 
                 <p:column>
                     <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
-                     <span>&nbsp;</span>
+                    <span>&nbsp;</span>
                 </p:column>
                 <p:column>
                     <p:calendar id="fhInicial" value="#{gastoReparacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
-                     <span>&nbsp;</span>
+                    <span>&nbsp;</span>
                 </p:column>
                 <p:column>
                     <p:outputLabel for="fhFin"  value="Fecha Final:" />
-                     <span>&nbsp;</span>
+                    <span>&nbsp;</span>
                 </p:column>
                 <p:column>
                     <p:calendar id="fhFin" value="#{gastoReparacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
-                     <span>&nbsp;</span>
+                    <span>&nbsp;</span>
                 </p:column>
                 <p:column>
                     <p:outputLabel value="Promedio de Gastos :" for="gasto"/>
