--- a/src/main/webapp/views/IndicePromedioGastoPorReparacion/index.xhtml
+++ b/src/main/webapp/views/IndicePromedioGastoPorReparacion/index.xhtml
@@ -13,9 +13,10 @@
     <ui:define name="content">
 
         <ui:include src="List.xhtml"/>
-<!--        <ui:include src="Create.xhtml"/>
-        <ui:include src="Edit.xhtml"/>
-        <ui:include src="View.xhtml"/>-->
+        <ui:include src="../common/Print.xhtml"/>
+        <!--        <ui:include src="Create.xhtml"/>
+                <ui:include src="Edit.xhtml"/>
+                <ui:include src="View.xhtml"/>-->
         <!--               <ui:include src="Edit.xhtml"/>
                   <ui:include src="Create.xhtml"/>-->
         <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
