--- a/src/main/webapp/views/comparativodegastosreparacion/index.xhtml
+++ b/src/main/webapp/views/comparativodegastosreparacion/index.xhtml
@@ -7,12 +7,20 @@
                 template="/WEB-INF/templates/commonLayout.xhtml">
 
     <ui:define name="title">
-        <h:outputText value="Venta de Producto"/>
+        <h:outputText value="Comparativo de gastos en reparacion entre diferentes equipos en un periodos de tiempo"/>
     </ui:define>
 
     <ui:define name="content">
-        <ui:include src="NuevoCompra.xhtml"/>
-        <ui:include src="new.xhtml"/>
+
+        <ui:include src="List.xhtml"/>
+        <ui:include src="../common/Print.xhtml"/>
+        <!--        <ui:include src="Create.xhtml"/>
+                <ui:include src="Edit.xhtml"/>
+                <ui:include src="View.xhtml"/>-->
+        <!--               <ui:include src="Edit.xhtml"/>
+                  <ui:include src="Create.xhtml"/>-->
+        <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
+
     </ui:define>
 
 </ui:composition>
