--- a/src/main/webapp/views/ComparativoTiempoDeVidaUtil/index.xhtml
+++ b/src/main/webapp/views/ComparativoTiempoDeVidaUtil/index.xhtml
@@ -7,15 +7,16 @@
                 template="/WEB-INF/templates/commonLayout.xhtml">
 
     <ui:define name="title">
-        <h:outputText value="Comparativo de tiempo de vida útil entre los diferentes equipos del mismo tipo: Informe comparativo de vida útil entre equipos de la misma funcionalidad, con la finalidad de optimizar recursos monetarios dentro del área hospitalaria."/>
+        <h:outputText value="Comparativo de tiempo de vida Ãºtil entre los diferentes equipos del mismo tipo: Informe comparativo de vida Ãºtil entre equipos de la misma funcionalidad, con la finalidad de optimizar recursos monetarios dentro del Ã¡rea hospitalaria."/>
     </ui:define>
 
     <ui:define name="content">
 
         <ui:include src="List.xhtml"/>
-<!--        <ui:include src="Create.xhtml"/>
-        <ui:include src="Edit.xhtml"/>
-        <ui:include src="View.xhtml"/>-->
+        <ui:include src="../common/Print.xhtml"/>
+        <!--        <ui:include src="Create.xhtml"/>
+                <ui:include src="Edit.xhtml"/>
+                <ui:include src="View.xhtml"/>-->
         <!--               <ui:include src="Edit.xhtml"/>
                   <ui:include src="Create.xhtml"/>-->
         <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
