--- a/src/main/webapp/views/ComparativoTiempoDeVidaUtil/List.xhtml
+++ b/src/main/webapp/views/ComparativoTiempoDeVidaUtil/List.xhtml
@@ -10,7 +10,7 @@
 
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-    <h1>Comparativo de Tiempo de Vida Util Entre los Diferentes Equipos</h1>
+    <h2 align="center">Comparativo de Tiempo de Vida Util Entre los Diferentes Equipos</h2>
     <h:form id="form">
         <div align="center" style="border: 1px black solid">
             <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
@@ -39,15 +39,15 @@
                     <p:outputLabel value="Equipo 1" for="equipo" />
                 </p:column>
                 <p:column>
-                    <p:selectOneMenu id="equipo" value="#{comparativoDeTiempoVidaUtilManagedBean.equipo}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                    <p:selectOneMenu id="equipo" value="#{comparativoDeTiempoVidaUtilManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
                         <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                     </p:selectOneMenu>
                 </p:column>
                 <p:column>
-                    <p:outputLabel value="Equipo 2" for="equipo" />
+                    <p:outputLabel value="Equipo 2" for="equipodos" />
                 </p:column>
                 <p:column>
-                    <p:selectOneMenu id="equipodos" value="#{comparativoDeTiempoVidaUtilManagedBean.equipo}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                    <p:selectOneMenu id="equipodos" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
                         <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                     </p:selectOneMenu>
                 </p:column>
