--- a/src/main/webapp/views/ProyeccionYProgramacionMantenimientosPreventivos/List.xhtml
+++ b/src/main/webapp/views/ProyeccionYProgramacionMantenimientosPreventivos/List.xhtml
@@ -1,16 +1,97 @@
-<?xml version="1.0" encoding="windows-1252"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:composite="http://java.sun.com/jsf/composite"
+
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+
+
+    <h:form id="form">
+        <div align="center" style="border: 1px black solid">
+            <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
+            <p:panelGrid  columns="2" columnClasses="column">
+                <p:column>
+                    <h:outputLabel for="fechaActual" value="Fecha de Emision : #{tasaExitoFalloReparacionesManagedBean.fechaEmision}"  />
+                </p:column>
+                <p:column>                                
+                    <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
+                </p:column>
+                <p:column>
+                    <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_tasaExito/fallo" />
+                </p:column>
+            </p:panelGrid>
+            
+            <h2 align="center">Proyeccion y Programacion de Mantenimientos Preventivos</h2>
+            
+           
+                
+            <h:panelGrid  columnClasses="column">
+              
+             
+                  <h:outputLabel value="Seleccione Equipo"/>
+                  <p:selectOneMenu id="areaHospitalaria" value="#{comparativoDeTiempoVidaUtilManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                  <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                  </p:selectOneMenu>
+             
+              
+      <p:dataTable var="car" value="Equipo">
+    <p:column headerText="Equipo">
+         <h:selectBooleanCheckbox value="" />
+        <h:outputText value="Equipo" />
+    </p:column>
+ 
+    <p:column headerText="Diario">
+          <h:selectBooleanCheckbox value="" />
+        <h:outputText value="uno" />
+    </p:column>
+ 
+    <p:column headerText="Semanal">
+          <h:selectBooleanCheckbox value="" />
+        <h:outputText value="uno" />
+    </p:column>
+          
+      <p:column headerText="Quincenal">
+            <h:selectBooleanCheckbox value="" />
+        <h:outputText value="uno" />
+    </p:column>
+ 
+    <p:column headerText="Mensual">
+          <h:selectBooleanCheckbox value="" />
+        <h:outputText value="uno" />
+    </p:column>
+          
+
+      
+</p:dataTable>
+                 
+              
+                <p:column>
+               <p:button value="Aceptar"/>
+               <p:button value="Limpiar"/>
+               <p:button value="Volver Atras"/>
+              </p:column>
+              
+             
+               
+            </h:panelGrid>
+           
+                 
+               
+                                  
+                
+                  
+                
+                
+          
+            
+        </div>
+              
+         
+    </h:form>
+
+</ui:composition>
