--- a/src/main/webapp/views/TasaExitoFalloReparaciones/List.xhtml
+++ b/src/main/webapp/views/TasaExitoFalloReparaciones/List.xhtml
@@ -14,84 +14,66 @@
     <h:form id="form">
         <div align="center" style="border: 1px black solid">
             <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
-            
-           
-
-
             <p:panelGrid  columns="2" columnClasses="column">
                 <p:column>
-                    <h:outputLabel for="fechaInicial" value="Fecha Inicial: #{tasaExitoFalloReparacionesManagedBean.fechaInicial}"  />
+                    <h:outputLabel for="fechaActual" value="Fecha de Emision : #{tasaExitoFalloReparacionesManagedBean.fechaEmision}"  />
                 </p:column>
-              
-                <p:column>
-                    <span>&nbsp;</span>
-                    <br/>
-                    
-                    <p:column>
-                        <h:outputLabel for="fechaFinal" value="Fecha Final: #{tasaExitoFalloReparacionesManagedBean.fechaFinal}"  />
-                </p:column>
-              
-                    <p:column>
-                    <span>&nbsp;</span>
-                    <br/>
-                    
-                    
+                <p:column>                                
                     <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
                 </p:column>
                 <p:column>
-                    <span>&nbsp;</span>
-                    <br/>
-                    <h:outputLabel for="rpt" value="Nombre de Reporte : Tasa de Exito/Fallo en Reparaciones" />
+                    <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_tasaExito/fallo" />
                 </p:column>
             </p:panelGrid>
-
-            <p:growl id="msgs" showDetail="true" />
-            <br/> <br/>
-            <h:panelGrid columns="2" cellpadding="5">
-
-                <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
-                <p:calendar id="fhInicial" value="#{indiceDeEncarrilamientoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
-
-                <p:outputLabel for="fhFin"  value="Fecha Final:" />
-                <p:calendar id="fhFin" value="#{indiceDeEncarrilamientoManagedBean.date2}"  pattern="dd-MM-yyyy" />
-
+            
+            <h2 align="center">Tasa de Exito / Fallo en Reparaciones</h2>
+            
+           
+                
+            <h:panelGrid columns="2" columnClasses="column">
+              
+              <p:column colspan="2">
+                  <h:outputLabel value="Area Hospitalaria"/>
+                  <p:selectOneMenu id="areaHospitalaria" value="#{comparativoDeTiempoVidaUtilManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                  <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                  </p:selectOneMenu>
+              </p:column>
+              
+              <p:column colspan="2">
+                  <h:outputLabel value="Fecha Inicial"  />
+                  <p:selectOneMenu id="fechaInicial" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                  <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                  </p:selectOneMenu>
+              </p:column>
+                <p:column>
+                     <h:outputLabel value="Fecha Final"  />
+                  <p:selectOneMenu id="fechaFinal" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                  <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                  </p:selectOneMenu>    
+                </p:column> 
+                 
+                <p:column>
+               <p:button value="Aceptar"/>
+               <p:button value="Limpiar"/>
+               <p:button value="Volver Atras"/>
+              </p:column>
+              
+             
+               
             </h:panelGrid>
-            <br/> <br/>
-
-            <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                <p:column>
-                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value1}" />
-                    <h:outputText value="Incluir Tasa de Reparaciones Exitosas " />
-                </p:column>
-                <p:column>
-                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value2}" />
-                    <h:outputText value="Incluir Gastos por Reparacion " />
-                </p:column>
-                <p:column>
-                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value3}" />
-                    <h:outputText value="Incluir Tiempo de Reparacion Total " />
-                </p:column>
-                <p:column>
-                    <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value4}" />
-                    <h:outputText value="Incluir Gastos por Depreciacion " />
-                </p:column>
-
-            </h:panelGrid>
-
-            <br/><br/>
-            <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />
-            <br/><br/>
-
+           
+                 
+               
+                                  
+                
+                  
+                
+                
+          
+            
         </div>
-
-        <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
-            <p:panelGrid id="display" columns="2" columnClasses="label,value">
-                <h:outputText value="Event:" />
-                <h:outputText value="#{indiceDeEncarrilamientoManagedBean.date2}">
-                    <f:convertDateTime pattern="MM/dd/yyyy" />
-                </h:outputText>
-            </p:panelGrid>
-        </p:dialog>
+              
+         
     </h:form>
 
 </ui:composition>
