TasaExitoFalloManagedBeam y el List del mismo

--- a/src/main/webapp/views/TasaExitoFalloReparaciones/List.xhtml
+++ b/src/main/webapp/views/TasaExitoFalloReparaciones/List.xhtml
@@ -16,7 +16,7 @@
             <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
             <p:panelGrid  columns="2" columnClasses="column">
                 <p:column>
-                    <h:outputLabel for="fechaActual" value="Fecha de Emision : #{tasaExitoFalloReparacionesManagedBean.fechaEmision}"  />
+                    <h:outputLabel value="Fecha de Emision : #{TasaExitoFalloManagedBean.fechaEmision}"  />
                 </p:column>
                 <p:column>                                
                     <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
